--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -26,7 +26,9 @@
     "axios": "^1.8.4",
     "expo": "~52.0.38",
     "expo-blur": "~14.0.3",
+    "expo-calendar": "~14.0.6",
     "expo-constants": "~17.0.8",
+    "expo-dev-client": "~5.0.20",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-image-picker": "~16.0.6",
@@ -49,10 +51,10 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.11.2",
+    "react-native-voice": "^0.3.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "tailwindcss": "^3.4.17",
-    "expo-calendar": "~14.0.6"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
