Notification - Frontend - ReactNative

--- a/Frontend/app.json
+++ b/Frontend/app.json
@@ -9,13 +9,20 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.ruppin.sportify",
+      "infoPlist": {
+        "NSUserNotificationUsageDescription": "This app uses notifications to keep you updated about sports events and groups."
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.ruppin.sportify",
+      "permissions": ["android.permission.VIBRATE"],
+      "googleServicesFile": "./google-services.json"
     },
     "web": {
       "bundler": "metro",
@@ -35,10 +42,25 @@
       ],
       "expo-secure-store",
       "expo-font",
-      "expo-web-browser"
+      "expo-web-browser",
+      [
+        "expo-notifications",
+        {
+          "icon": "./assets/notification-icon.png",
+          "color": "#3CCF4E",
+          "defaultChannel": "default",
+          "sounds": ["./assets/notification.wav"]
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "782255c4-4d7f-46f3-8d16-ae85f77591b1"
+      }
     }
   }
 }
