--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -23,14 +23,18 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "axios": "^1.8.4",
+    "domexception": "^4.0.0",
     "expo": "^53.0.9",
     "expo-blur": "~14.1.4",
     "expo-calendar": "~14.1.4",
     "expo-constants": "~17.1.6",
+    "expo-dev-client": "~5.2.4",
+    "expo-device": "~7.1.4",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.5",
+    "expo-notifications": "~0.31.4",
     "expo-router": "~5.0.7",
     "expo-secure-store": "~14.2.3",
     "expo-splash-screen": "~0.30.8",
@@ -39,6 +43,7 @@
     "expo-system-ui": "~5.0.7",
     "expo-web-browser": "~14.1.6",
     "jwt-decode": "^4.0.0",
+    "lru-cache": "^11.1.0",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -51,10 +56,7 @@
     "react-native-svg": "^15.11.2",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
-    "tailwindcss": "^3.4.17",
-    "expo-notifications": "~0.31.4",
-    "expo-device": "~7.1.4",
-    "expo-dev-client": "~5.2.4"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -62,9 +64,11 @@
     "@types/react": "~19.0.10",
     "@types/react-native": "^0.72.8",
     "@types/react-test-renderer": "^18.3.0",
+    "glob": "^11.0.3",
     "jest": "^29.2.1",
     "jest-expo": "~53.0.5",
     "react-test-renderer": "^19.0.0",
+    "rimraf": "^6.0.1",
     "typescript": "~5.8.3"
   },
   "private": true,
