Fix package-lock for EAS build and eas.json

--- a/eas.json
+++ b/eas.json
@@ -5,6 +5,7 @@
   },
   "build": {
     "development": {
+      "workingDirectory": "Frontend",
       "developmentClient": true,
       "distribution": "internal",
       "ios": {
@@ -15,9 +16,11 @@
       }
     },
     "preview": {
+      "workingDirectory": "Frontend",
       "distribution": "internal"
     },
     "production": {
+      "workingDirectory": "Frontend",
       "autoIncrement": true
     }
   },
