--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -40,8 +40,8 @@
     "expo-web-browser": "~14.1.6",
     "jwt-decode": "^4.0.0",
     "nativewind": "^4.1.23",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-native": "0.79.2",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "~2.24.0",
@@ -59,13 +59,14 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
-    "@types/react": "~19.0.10",
+    "@types/react": "19.0.0",
     "@types/react-native": "^0.72.8",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
     "jest-expo": "~53.0.5",
-    "react-test-renderer": "^19.1.0",
+    "react-test-renderer": "19.0.0",
     "typescript": "~5.8.3"
   },
+
   "private": true
 }
