--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -54,7 +54,8 @@
     "tailwindcss": "^3.4.17",
     "expo-notifications": "~0.31.4",
     "expo-device": "~7.1.4",
-    "expo-dev-client": "~5.2.4"
+    "expo-dev-client": "~5.2.4",
+    "react-native-get-random-values": "~1.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -67,6 +68,5 @@
     "react-test-renderer": "19.0.0",
     "typescript": "~5.8.3"
   },
-
   "private": true
 }
