Revert "updated sportify logo"
This reverts commit 4a7a7e8ad7ef669ceeea799fbaf9c9c756a42c02.

--- a/Frontend/app.json
+++ b/Frontend/app.json
@@ -1,10 +1,10 @@
 {
   "expo": {
-    "name": "Sportify",
-    "slug": "sportify",
+    "name": "Frontend",
+    "slug": "Frontend",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/sportifyIcon.jpg",
+    "icon": "./assets/images/icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -17,7 +17,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/sportifyIcon.jpg",
+        "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
       "googleServicesFile": "./google-services.json",
